# K1.node2

./: .env  .gitignore  AGENT_HANDOVER_COMPREHENSIVE.md  ANALYSIS_INDEX.md  AUDIO_ARCHITECTURE_INDEX.md  AUDIO_INTEGRATION_ARCHITECTURE.md  AUDIO_MIGRATION_PLAN.md  BEAT_DETECTION_FIX_SUMMARY.md  BLOOM_MODE_FAILURE_ANALYSIS.md  CHOREOGRAPHY_DEPLOYMENT_SUMMARY.md  CLAUDE.md  CRITICAL_CSS_FIXES.md  CSS_UPDATES_APPLIED.md  DELIVERABLES_MANIFEST.txt  DEPLOYMENT_READY.txt  EMOTISCOPE_DELIVERY.txt  FORENSIC_ANALYSIS_INDEX.md  K1_SYSTEM_AUDIT_TECHNICAL_REPORT.md  LOG.md  MISSION.md  MULTIPLIER_ARCHITECTURE.md  PALETTE_FIX_README.md  QUICK_FIX_SUMMARY.md  QUICK_IMPLEMENTATION_GUIDE.md  QUICK_UI_IMPROVEMENTS.md  README.md  README_Claude_Skills.md  START_HERE.md  SUBTASK_2_3_2_4_PALETTE_SYSTEM_ANALYSIS.md  SUBTASK_3_2_PARAMETER_PROCESSING_ANALYSIS.md  SUBTASK_3_3_FINAL_ANALYSIS.md  SUBTASK_3_3_PARAMETER_RESPONSIVENESS_TEST.md  SUBTASK_3_4_CONTROL_SYSTEM_FIX_RECOMMENDATIONS.md  UI_UX_RECOMMENDATIONS.md  WEBSERVER_ANALYSIS_FINAL_VERDICT.md  WEB_DASHBOARD_BUGS_SUMMARY.md  audit_investigation_log.md  install_libgraph.sh  package.json  playwright.config.ts  (+4 more)
.claude/: CRITICAL_CODE.md  PHASE_A_VALIDATION.md  README.md
.github/: pull_request_template.md
.mem0_local/: config.yaml
.taskmaster/: QUICKSTART.md  README.md  config.json
Glassmorphic Tile Design System/: README.md  index.html  package.json
Implementation.plans/: AUDIO_MIGRATION_PLAN.md  FIGMA_MAKE_AGENT_PROMPT.md  FIGMA_MAKE_QUICK_START.md  FIGMA_PROMPT_SONG_ANALYSIS.md  FigmaMake_PromptSuite_NodeUI_v1.md  GENESIS_UI_SONG_ANALYSIS_TAB.md  HANDOFF_BRIEF_PHASE_1_WEEK_4.md  K1_WIRELESS_ENHANCEMENT_PLAN.md  KIRO_AGENT_BRIEF.md  LAYER_3_REVISED_IMPLEMENTATION_PLAN.md  MAKE_PROMPT_1_DESIGN_TOKENS.md  MAKE_PROMPT_2_COMPONENT_STATES.md  MAKE_PROMPT_3_ADVANCED_REFINEMENTS.md  PHASE_1_WEEK_4_FIGMA_MAKE_AGENT_PROMPT.md  PHASE_1_WEEK_4_RESPONSIVE_DESIGN_SPEC.md  README.md  USER_EXPERIENCE_OPTIMIZATION.md  WEEK1_START_HERE.md  WIRELESS_TESTING_FRAMEWORK.md
Implementation.plans/k1-libgraph-layer1-json-metrics/host/libgraph/: CMakeLists.txt  README.md
Implementation.plans/k1-libgraph-layer1-json-metrics/host/libgraph/include/k1/: graph_io.hpp
Implementation.plans/k1-libgraph-layer1-json-metrics/host/libgraph/src/: graph.cpp  graph_io.cpp
Implementation.plans/k1-libgraph-layer1-json-metrics/host/libgraph/tests/: bench_large.cpp  test_json_loader.cpp  test_main.cpp
codegen/: compliant_patterns_generated.h  package.json  test_environment.sh  tsconfig.json  validation_report.md  validation_report_phase2.md  validation_report_verification.md
docs/: AUDIO_NODES.md  CONTRIBUTING.md  DIAGNOSTICS_REPORT_2025-10-31.md  Dashboard.md  FIRMWARE_PATCH_LIST_2025-10-31.md  INDEX.md  K1_DEVICE_DIAGNOSTICS_TOOL.md  PHASE_A_COMPLETE.md  PHASE_A_SUCCESS.md  README.md  TEMPLATE_ARCHITECTURE_ANALYSIS.md  docs_index.json  webapp_audit_2025-10-30.md
firmware/: ADVANCED_CHOREOGRAPHY_PATTERNS.md  AUDIO_LATENCY_FIX_DEPLOYED.md  BOTTLENECK_ELIMINATION_SUMMARY.md  FORENSIC_ANALYSIS_POST_OPTIMIZATION.md  PATTERN_DESIGN_PHILOSOPHY.md  PATTERN_QUICK_START.md  PATTERN_REBUILD_SUMMARY.md  PATTERN_VISUAL_GUIDE.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  TEST_GENERATION_COMPLETE.md  TEST_SUITE_SUMMARY.md  build_output.txt  compile_commands.json  partitions.csv  platformio.ini
graphs/: README_EMOTISCOPE.md  audio_example_bass_pulse.json  audio_test_beat_spectrum.json  audio_test_spectrum_bin.json  aurora.json  aurora_spectrum.json  departure.json  emotiscope_beat_tunnel.json  emotiscope_fft.json  emotiscope_metronome.json  emotiscope_octave.json  emotiscope_perlin.json  emotiscope_spectrum.json  energy_adaptive_pulse.json  lava_beat.json  multiband_cascade.json  rainbow.json.disabled
host/libgraph/: CMakeLists.txt  README.md  User_Guide.md
host/libgraph/include/k1/: graph.hpp  graph_io.hpp
host/libgraph/src/: graph.cpp  graph_io.cpp
host/libgraph/tests/: bench_large.cpp  test_bench_betw_json.cpp  test_betweenness.cpp  test_json_loader.cpp  test_main.cpp
k1-control-app/: .env.production  DEVELOPMENT.md  README.md  TESTING_SUMMARY.md  TEST_FAILURE_ANALYSIS.md  package.json  quokka.config.js  vite.config.ts  wallaby.js
layer3_dsp_desktop/: CMakeLists.txt  COMPLETION_REPORT.md  DELIVERABLES.md  PERFORMANCE_RESULTS.md  QUICKSTART.md  README.md
layer3_dsp_desktop/include/: audio_visualizer.hpp  dsp_pipeline.hpp  hardware_perf_counters.hpp  high_resolution_timer.hpp  performance_stats.hpp  waveform_generator.hpp
layer3_dsp_desktop/tests/: test_dsp_and_timing.cpp
metrics/: graph.metrics.json  graph.nodes.json
playwright-report/: index.html
preview/: preview.html
s3z/: STATUS_LED_INDICATORS.md  partitions.csv  platformio.ini
scripts/: mem0_agent_search.py  mem0_bootstrap.py  mem0_bulk_ingest.py  mem0_compare_saas_vs_local.py  mem0_custom_reranker.py  mem0_diagnostic.py  (+10 more)
(+1098 files in other folders)
